// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`codeHost handleCodeHost() Decorations decorates a diff code view 1`] = `
<div
  class="test test-6 sg-mounted"
  id="code"
>
  <div
    line="1"
    part="head"
  >
    <span
      class="code-element"
    >
      <span
        class="sourcegraph-extension-element line-decoration-attachment"
        data-part="head"
      >
        test decoration head line 1
      </span>
    </span>
  </div>
  

  <div
    line="2"
    part="base"
    style="background-color: red;"
  >
    <span
      class="code-element"
    >
      <span
        class="sourcegraph-extension-element line-decoration-attachment"
        data-part="base"
      >
        test decoration base line 2
      </span>
    </span>
  </div>
  

  <div
    line="2"
    part="head"
    style="background-color: blue;"
  >
    <span
      class="code-element"
    >
      <span
        class="sourcegraph-extension-element line-decoration-attachment"
        data-part="head"
      >
        test decoration head line 2
      </span>
    </span>
  </div>
  

  <div
    line="4"
    part="head"
  >
    <span
      class="code-element"
    />
  </div>
  

  <div
    line="5"
    part="base"
    style="background-color: red;"
  >
    <span
      class="code-element"
    >
      <span
        class="sourcegraph-extension-element line-decoration-attachment"
        data-part="base"
      >
        test decoration base line 5
      </span>
    </span>
  </div>
  

</div>
`;

exports[`codeHost handleCodeHost() Decorations decorates a diff code view 2`] = `
<div
  class="test test-6 sg-mounted"
  id="code"
>
  <div
    line="1"
    part="head"
  >
    <span
      class="code-element"
    >
      <span
        class="sourcegraph-extension-element line-decoration-attachment"
        data-part="head"
      >
        test decoration head line 1
      </span>
    </span>
  </div>
  

  <div
    line="2"
    part="base"
    style=""
  >
    <span
      class="code-element"
    />
  </div>
  

  <div
    line="2"
    part="head"
    style="background-color: blue;"
  >
    <span
      class="code-element"
    >
      <span
        class="sourcegraph-extension-element line-decoration-attachment"
        data-part="head"
      >
        test decoration head line 2
      </span>
    </span>
  </div>
  

  <div
    line="4"
    part="head"
  >
    <span
      class="code-element"
    />
  </div>
  

  <div
    line="5"
    part="base"
    style="background-color: red;"
  >
    <span
      class="code-element"
    >
      <span
        class="sourcegraph-extension-element line-decoration-attachment"
        data-part="base"
      >
        test decoration base line 5
      </span>
    </span>
  </div>
  

</div>
`;

exports[`codeHost handleCodeHost() Decorations decorates a diff code view 3`] = `
<div
  class="test test-6 sg-mounted"
  id="code"
>
  <div
    line="1"
    part="head"
  >
    <span
      class="code-element"
    >
      <span
        class="sourcegraph-extension-element line-decoration-attachment"
        data-part="head"
      >
        test decoration head line 1
      </span>
    </span>
  </div>
  

  <div
    line="2"
    part="base"
    style=""
  >
    <span
      class="code-element"
    />
  </div>
  

  <div
    line="2"
    part="head"
    style="background-color: blue;"
  >
    <span
      class="code-element"
    >
      <span
        class="sourcegraph-extension-element line-decoration-attachment"
        data-part="head"
      >
        test decoration head line 2 changed
      </span>
    </span>
  </div>
  

  <div
    line="4"
    part="head"
  >
    <span
      class="code-element"
    />
  </div>
  

  <div
    line="5"
    part="base"
    style="background-color: red;"
  >
    <span
      class="code-element"
    >
      <span
        class="sourcegraph-extension-element line-decoration-attachment"
        data-part="base"
      >
        test decoration base line 5
      </span>
    </span>
  </div>
  

</div>
`;
